--- a/index.html
+++ b/index.html
@@ -803,8 +803,7 @@
             <div class="researchers-grid">
                 <div class="researcher-card">
                     <h4>Ana Luiza Parente De Almeida</h4>
-                    <p>Pesquisadora Principal</p>
-                    <p>Coordenadora do Projeto</p>
+                    <p>Acadêmica de psicologia</p>
                 </div>
                 <div class="researcher-card">
                     <h4>Fernanda De Sá Tiago</h4>
@@ -843,8 +842,8 @@
                 </a>
             </div>
             
-            <p>© 2024 - Estudo sobre Prevenção do Câncer do Colo do Útero</p>
-            <p>Macapá - AP | Pesquisa Acadêmica - Universidade Federal do Amapá</p>
+            <p>© 2025 - Estudo sobre Prevenção do Câncer do Colo do Útero</p>
+            <p>Macapá - AP | Pesquisa Acadêmica - IMMES - Instituto Macapaense do Melhor Ensino Superior</p>
             <p style="margin-top: 1.5rem; font-size: 0.9rem; opacity: 0.8;">
                 Desenvolvido para promoção da saúde da mulher e avanço do conhecimento científico
             </p>
@@ -880,4 +879,5 @@
     </script>
 </body>
 </html>
+
 
