--- a/index.html
+++ b/index.html
@@ -489,7 +489,8 @@
         <section class="content-section" id="introducao">
             <div class="section">
                 <h2>Introdução</h2>
-                <p>O câncer do colo do útero permanece como um significativo problema de saúde pública global, particularmente em regiões com limitado acesso a serviços de saúde preventiva. No Brasil, é o terceiro tumor mais frequente na população feminina e a quarta causa de morte por câncer entre mulheres.</p>
+                <p>O exame preventivo do câncer de colo do útero é um importante recurso de rastreamento e detecção precoce de lesões cervicais, podendo prevenir a evolução para câncer invasivo. Apesar de sua disponibilidade e simplicidade técnica, muitas mulheres não realizam o exame de maneira regular, o que contribui para diagnósticos tardios e complicações graves. 
+   A não adesão ao PCCU envolve fatores emocionais, socioculturais e estruturais, como medo, vergonha, tabus associados ao corpo feminino, experiências negativas prévias e dificuldades de acesso ao serviço de saúde (Silva et al., 2023).</p>
                 
                 <div class="quote-section">
                     <div class="quote">
@@ -942,6 +943,7 @@
     </script>
 </body>
 </html>
+
 
 
 
