--- a/index.html
+++ b/index.html
@@ -895,15 +895,15 @@
         <!-- FOOTER -->
         <footer>
             <div class="footer-buttons">
-                <a href="PESQUISA ESCRITA.docx" class="footer-btn" download>
-                    Download do Artigo Completo
-                </a>
-                <a href="DADOS PCCU 2024.xlsx" class="footer-btn" download>
-                    Acessar Planilha de Dados
-                </a>
-                <a href="#contato" class="footer-btn">
-                    Contato da Equipe
-                </a>
+    <a href="PESQUISA ESCRITA.docx" class="footer-btn" download>
+        Download do Artigo Completo
+    </a>
+    <a href="DADOS PCCU 2024.xlsx" class="footer-btn" download>
+        Acessar Planilha de Dados
+    </a>
+    <a href="mailto:analuizaalmeida467@gmail.com" class="footer-btn">
+        Email da Equipe
+    </a>
             </div>
             
             <p>© 2025 - Estudo sobre Prevenção do Câncer do Colo do Útero</p>
@@ -943,6 +943,7 @@
     </script>
 </body>
 </html>
+
 
 
 
