--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                 <h2>Epidemiologia e Fatores de Risco</h2>
                 
                 <h3>Papilomavírus Humano (HPV)</h3>
-                <p>O HPV é reconhecido como agente necessário, porém não suficiente, para o desenvolvimento do câncer cervical. Estudos demonstram que a infecção persistente por tipos de alto risco do HPV está presente em mais de 99% dos casos de carcinoma cervical.</p>
+                <p>A infecção persistente pelo Papilomavírus Humano (HPV) é reconhecida como a principal causa das lesões cervicais de evolução neoplásica. A progressão das lesões depende de fatores imunológicos, genéticos, hormonais e comportamentais (Bosch & Muñoz, 2020).</p>
 
                 <div class="quote-section">
                     <div class="quote">
@@ -943,6 +943,7 @@
     </script>
 </body>
 </html>
+
 
 
 
