--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                         <div class="age-bar-inner" style="width: 15%">15%</div>
                     </div>
                     <div class="age-bar">
-                        <div class="age-label">35-44 anos</div>
+                        <div class="age-label">30-45 anos</div>
                         <div class="age-bar-inner" style="width: 32%">32%</div>
                     </div>
                     <div class="age-bar">
@@ -665,7 +665,7 @@
 
                 <div class="quote-section">
                     <div class="quote">
-                        "O pico de incidência entre 35-44 anos reflete a história natural da infecção por HPV, com progressão lenta das lesões precursoras."
+                        "O pico de incidência entre 30-45 anos reflete a história natural da infecção por HPV, com progressão lenta das lesões precursoras."
                     </div>
                     <div class="quote-author">— Dr. Ricardo Santos, Revista Brasileira de Cancerologia</div>
                 </div>
@@ -748,7 +748,8 @@
                 </div>
 
                 <h3>Fatores Psicossociais como Barreiras Críticas</h3>
-                <p>O medo do resultado e a vergonha associada ao exame ginecológico emergiram como as principais barreiras à adesão ao rastreamento. Estes fatores emocionais frequentemente superam as barreiras estruturais, indicando a necessidade de abordagens mais sensíveis e humanizadas.</p>
+                <p>O medo do resultado e a vergonha associada ao exame ginecológico emergiram como as principais barreiras à adesão ao rastreamento. Estes fatores emocionais frequentemente superam as barreiras estruturais, indicando a necessidade de abordagens mais sensíveis e humanizadas. O estímulo ao autocuidado, o fortalecimento da comunicação em saúde e a criação de espaços de acolhimento podem contribuir de forma significativa para o aumento da adesão ao PCCU e para a prevenção de lesões cervicais.
+</p>
 
                 <h3>Implicações para a Prática Clínica</h3>
                 <div class="research-grid">
@@ -771,7 +772,7 @@
                         </ul>
                     </div>
                     <div class="research-card">
-                        <h4>Qualificação do Atendimento</h4>
+                        <h4>Atendimento</h4>
                         <ul>
                             <li>Capacitação de profissionais</li>
                             <li>Ambiente acolhedor</li>
@@ -797,7 +798,7 @@
 
                 <h3>Principais Conclusões</h3>
                 <ul>
-                    <li>A faixa etária de 35-44 anos apresenta maior risco para alterações citológicas significativas</li>
+                    <li>A faixa etária de 30-45 anos apresenta maior risco para alterações citológicas significativas</li>
                     <li>Fatores psicossociais são as principais barreiras à adesão ao rastreamento</li>
                     <li>Estratégias educativas devem ser direcionadas por faixa etária</li>
                     <li>O acolhimento humanizado é fundamental para superar barreiras emocionais</li>
@@ -943,6 +944,7 @@
     </script>
 </body>
 </html>
+
 
 
 
