--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                     </a>
                 </div>
             </div>
-        </section>
+        </section>s
 
         <!-- PESQUISADORES -->
         <section class="researchers-section">
@@ -944,6 +944,7 @@
     </script>
 </body>
 </html>
+
 
 
 
