--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
         <!-- REFERÊNCIAS -->
         <section class="content-section" id="referencias">
             <div class="section">
-                <h2>Referências Bibliográficas</h2>
+                <h2>Referências</h2>
 
                 <ul class="references">
                     <li>INCA - Instituto Nacional de Câncer. (2024). Diretrizes Brasileiras para o Rastreamento do Câncer do Colo do Útero. Rio de Janeiro: INCA.</li>
@@ -944,6 +944,7 @@
     </script>
 </body>
 </html>
+
 
 
 
